--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,117 @@
 #jelmer {
 	font-family: "Open sans", sans-serif;
+	--color-background: #4185d9 ; /* blauw tint */
+	--color-second-background: #cf3030; /* rood tint */
+	--color-third-background: #cfbf30; /*geel tint */
+}
+
+#jelmer p:nth-of-type(1) {
+
+}
+
+#jelmer div {
+	width: 350px;
+	height: 350px;
+}
+
+/* Fallbacks */
+
+#jelmer section:nth-of-type(1) div:nth-of-type(1) {
+	background: var(--color-background, green);
+	margin-bottom: 50px;
+}
+
+#jelmer section:nth-of-type(1) div:nth-of-type(1)>img {
+	width: 60%;
+	border-radius: 50%;
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+#jelmer section:nth-of-type(1) div:nth-of-type(2) {
+	background: var(--color-background, var(--color-second-background, var(--color-third-background, green)));
+}
+
+/* Logica */
+
+#jelmer section:nth-of-type(2) {
+	--i: 0;
+	--color: var(--color-background);
+}
+
+#jelmer section:nth-of-type(2) input:checked ~ * {
+	--i: 1;
+	--color: var(--color-second-background);
+}
+
+#jelmer section:nth-of-type(2) div:nth-of-type(1) {
+	width: 150px;
+	height: 150px;
+	background: var(--color);
+	margin: 50px 0;
+	transform: rotate(calc(var(--i)*45deg));
+	margin-left: calc(var(--i)*60px);
+	transition: background 1s, transform 1s, margin-left 1s;
+}
+
+}
+
+/* Themes */
+
+@media (prefers-color-scheme: no-preference) {
+	#jelmer {
+		--color-backgroundTheme: white;
+		--color-textTheme: #0b1016;
+	}
+}
+
+@media (prefers-color-scheme: dark) {
+	#jelmer {
+		--color-backgroundTheme: #38444c;
+		--color-textTheme: #f0f2f3;
+		--background-sky: linear-gradient(190deg, #172e41, #2f5478);
+	}
+}
+
+@media (prefers-color-scheme: light) {
+	#jelmer {
+		--color-backgroundTheme: white;
+		--color-textTheme: #0b1016;
+		--background-sky: linear-gradient(190deg, #03b6fc, #a6e6ff);
+	}
+}
+
+#jelmer section:nth-of-type(3) {
+	background: var(--color-backgroundTheme);
+	color: var(--color-textTheme);
+}
+
+#jelmer section:nth-of-type(3) div:nth-of-type(1) {
+	width: 100%;
+	height: 500px;
+	//transform: rotate(calc(var(--i)*45deg));
+	//margin-left: calc(var(--i)*30px);
+	transition: background 1s, transform 1s, margin-left 1s;
+}
+
+#jelmer section:nth-of-type(3) div:nth-of-type(1) div:nth-of-type(1) {
+	background: var(--background-sky);
+	height: 75%;
+	transition: background 1s;
+}
+
+#jelmer section:nth-of-type(3) div:nth-of-type(1) div:nth-of-type(2) {
+	background: #879759;
+	height: 25%;
+	width: 100%;
+}
+
+#jelmer section:nth-of-type(3) div:nth-of-type(1) div:nth-of-type(2)>img {
+	width: 21em;
+	height: auto;
+	position: relative;
+	top: -110px;
+	left: 100px;
 }
