--- a/eindopdracht/styles/main.css
+++ b/eindopdracht/styles/main.css
@@ -254,7 +254,8 @@ main>section>div>article>h3 {
 	margin: 0;
 	color: lightgreen;
 	font-size: 2em;
-	display: inline-block;
+	width: fit-content;
+	//display: inline-block;
 	text-shadow: 0px 0px 0 black, -2px -2px 0 black, -4px -4px 0 white, -6px -6px 0 black, -8px -8px 0 white,
 				0px 0px 0 black, -2px 2px 0 black, -4px 4px 0 white, -6px 6px 0 black, -8px 8px 0 white;
 	transition: text-shadow 1s ease;
