--- a/eindopdracht/styles/main.css
+++ b/eindopdracht/styles/main.css
@@ -1,5 +1,5 @@
 :root {
-	--font: /*'Lemonada'*/'poppins';
+	--font: 'poppins','Lemonada';
 	--color-red: #ff6868;
 	--i: 0;
 }
@@ -14,12 +14,34 @@ body {
 	padding: 0;
 	font-family: var(--font);
 	background: var(--color-red);
-	height: 4000px;
 }
 
-main>section>div {
-	/*display:grid;
-	grid-template-columns: repeat(2, 1fr);*/
+main {
+	--grid-min-size: 700px;
+	display:grid;
+	grid-template-columns: repeat(auto-fill, minmax(var(--grid-min-size), 1fr));
+}
+
+main>section:nth-child(even) {
+	background-image: repeating-conic-gradient(from var(--conicHoek) at 70% 50%, var(--color-red), black, lightgreen, var(--color-red));
+	animation: rotateGradient 30s infinite alternate;
+}
+
+@property --conicHoek {
+  syntax: '<angle>';
+  inherits: false;
+  initial-value: .4turn;
+}
+
+@keyframes rotateGradient {
+	from {
+		--conicHoek: 0turn;		
+	}
+
+	to {
+		filter: invert(100%);
+		--conicHoek: 1turn;
+	}
 }
 
 main>section:nth-child(odd) {
@@ -52,8 +74,6 @@ input#switch {
 }
 
 input#switch:checked ~ h1 {
-	//transition: color 2s;
-	
 	animation:fall-down 2s forwards, change-color 2s forwards;
 }
 
@@ -83,9 +103,6 @@ input#switch:checked ~ label>.knifeSvg>path:nth-child(n+6) {
 
 h1>span:first-child {
 	font-size: 2em;
-	display: inline-block;
-	//mix-blend-mode: difference;
-	/*color: white;*/
 }
 
 
@@ -94,22 +111,10 @@ h1>span:nth-child(2) {
 	top: 12%;
 }
 
-h1:before {
-	content: "";
-	position: absolute;
-	display: block;
-	/*background: lightgreen;*/
-	left: 48%;
-	top: -5%;
-	transform: rotate(90deg) translateX(-50%);
-	z-index: -1;
-}
-
 body>header {
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
-	width: 100%;
 	height: 100vh;
 }
 
@@ -120,30 +125,26 @@ label[for="switch"] {
 .knifeSvg {
 	position: absolute;
 	top: 50%;
+	left: 14%;
 	transform: rotate(-50deg);
 	transition: all 1s;
 }
 
 .knifeSvg path:nth-child(5) {
-	opacity: 0;
-	
+	opacity: 0;	
 }
-
 
 .knifeSvg path:nth-child(n+6) {
 	opacity: 0;
 }
 
-
 header p {
     font-family: ANCHO;
     font-variation-settings:"wght" 52;
 	font-size: 1.5em;
-	text-transform: capitalize;
 	color: white;
 	text-align: center;
 	animation: varFont 1s infinite alternate;
-	/*transition: 1s;*/
 }
 
 @keyframes varFont {
@@ -157,15 +158,50 @@ header p {
 h2 {
 	position: relative;
 	font-size: 5em;
-	background: var(--color-red);
+	margin-left: 20px;
+	margin-top: 0;
 	color: white;
-	text-transform: capitalize;
+}
+
+h2:hover:before {
+	animation: trip-inReverse 1s forwards; 
+}
+
+h2:hover:after {
+	animation: trip-outReverse 1s forwards;
+}
+
+@keyframes trip-inReverse {
+	0% {
+		top: -20px;
+	}
+
+	40% {
+		top: -30px;
+	}
+
+	100% {
+		top: 0px;
+	}
+}
+
+@keyframes trip-outReverse {
+	0% {
+		top: 20px;
+	}
+
+	40% {
+		top: 30px;
+	}
+
+	100% {
+		top: 0px;
+	}
 }
 
 h2:before {
 	content: attr(data-text);
 	position: absolute;
-	top: 10px;
 	left: 0;
 	color: black;
 	letter-spacing: -0.03em;
@@ -175,13 +211,11 @@ h2:before {
 h2:after {
 	content: attr(data-text);
 	position: absolute;
-	top: 20px;
 	left: 0;
 	color: lightgreen;
 	letter-spacing: -0.06em;
 	animation: trip-out 1s forwards;
 }
-
 
 @keyframes dissolve {
 	0% {
@@ -221,33 +255,52 @@ h2:after {
 	}
 }
 
-main>section>div>article {
-	margin-left: 20px;
-	transition: 1s;
+blockquote {
+	text-align: center;
 }
 
-main>section>div>article:hover {
-	
+blockquote>p:first-child>span {
+	display: inline-block;
+	font-weight: 900;
+	font-size: 2em;
+	background: repeating-conic-gradient(from var(--conicHoek), var(--color-red), black, lightgreen, var(--color-red));
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	animation: rotateGradient 2s infinite alternate ease, rotateText 2s infinite ease;
 }
 
-main>section>div>article * {
-	/*position: sticky;*/
-	/*offset-path: path('M.51,13.05S-2,68,64.93,67.72,47.69-.85,116.06.52c56.79,1.14,63.49,44.38,64.13,59A18.24,18.24,0,0,1,179,66.23c-2.29,6.63,19,8.31,45.88-2.13');
-	animation: distance 10s forwards;*/
-	/*text-align: center;*/
-	margin-top: 10px;
-	/*margin-left: 200px;*/
-	/*transition: all 1s;*/
+blockquote>p:first-child>span:nth-child(odd) {
+	animation-direction: alternate;
 }
 
-@keyframes distance {
-	100% {
-		offset-distance: 100%;
+@keyframes rotateText {
+	to {
+		transform: rotate(360deg);
 	}
 }
 
-main>section>div>article * {
-	top: 100px;
+blockquote>p:nth-child(2) {
+	font-style: italic;
+}
+
+cite {
+	cursor: none;
+	transition: opacity .5s;
+}
+
+cite:hover {
+	opacity: 0;
+}
+
+main>section>div>article {
+	display: grid;
+	align-items: center;
+	grid-template-columns: 90% 10%;
+	grid-template-areas:
+	"title title"
+	"description price";
+	margin-left: 20px;
+	transition: 1s;
 }
 
 main>section>div>article>h3 {
@@ -255,35 +308,79 @@ main>section>div>article>h3 {
 	color: lightgreen;
 	font-size: 2em;
 	width: fit-content;
-	//display: inline-block;
-	text-shadow: 0px 0px 0 black, -2px -2px 0 black, -4px -4px 0 white, -6px -6px 0 black, -8px -8px 0 white,
-				0px 0px 0 black, -2px 2px 0 black, -4px 4px 0 white, -6px 6px 0 black, -8px 8px 0 white;
+	grid-area: title;
+	--textshadow-color1: black;
+	--textshadow-color2: white;
+	text-shadow: 0px 0px 0 var(--textshadow-color1), -2px -2px 0 var(--textshadow-color1), -4px -4px 0 var(--textshadow-color2), -6px -6px 0 var(--textshadow-color1), -8px -8px 0 var(--textshadow-color2),
+				0px 0px 0 var(--textshadow-color1), -2px 2px 0 var(--textshadow-color1), -4px 4px 0 var(--textshadow-color2), -6px 6px 0 var(--textshadow-color1), -8px 8px 0 var(--textshadow-color2);
 	transition: text-shadow 1s ease;
 }
 
 main>section>div>article>h3:hover {
-	text-shadow: 0px 0px 0 black, 2px 2px 0 black, 4px 4px 0 white, 6px 6px 0 black, 8px 8px 0 white,
-				0px 0px 0 black, 2px -2px 0 black, 4px -4px 0 white, 6px -6px 0 black, 8px -8px 0 white;
+	text-shadow: 0px 0px 0 var(--textshadow-color1), 2px 2px 0 var(--textshadow-color1), 4px 4px 0 var(--textshadow-color2), 6px 6px 0 var(--textshadow-color1), 8px 8px 0 var(--textshadow-color2),
+				0px 0px 0 var(--textshadow-color1), 2px -2px 0 var(--textshadow-color1), 4px -4px 0 var(--textshadow-color2), 6px -6px 0 var(--textshadow-color1), 8px -8px 0 var(--textshadow-color2);
 }
 
 main>section>div>article p {
 	color: white;
 	font-weight: bold;
-	display: inline-block;
-	width: 66%;
+	grid-area: description;
 }
 
 main>section>div>article div {
-	display: inline-block;
+	margin-right: 50px;
+	grid-area: price;
+	font-size: 1.5em;
+	font-weight: 700;
+	-webkit-text-fill-color: transparent;
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: white;
+	text-shadow: 2px 2px #ff1f8f, 5px 5px black;
+	transition: text-shadow .6s;
+}
+
+main>section>div>article div:hover {
+	text-shadow: 0px 0px #ff1f8f, 1px 1px black;
 }
 
 main>section>div>article div:before {
 	content: "€";
 }
 
-h3 {
-	/*transform: rotate3d(1, 1, 1, 45deg);*/
+main>p {
+	display: none;
 }
+
+main>svg {
+	display: block;
+	margin: auto;
+	transform: rotate(0deg) scale(.5);
+	transition: opacity 1s, transform 2s;
+	transition-delay: 0s, .1s;
+}
+
+main>svg:hover {
+	transform: rotate(1080deg) scale(3);
+	opacity: 1;
+}
+
+main>svg:hover>circle {
+	fill: url(#paint0_linear);
+}
+
+main>svg:hover>path:not(:nth-child(1)) {
+	fill: red;
+	transition: all 1s;
+}
+
+main>svg:hover>path:nth-child(7) {
+	d: path("M105.857 103V98.9107L102.051 97.4155C82.6441 89.7912 61.0708 89.7912 41.6635 97.4155L37.8574 98.9107V103C37.8574 121.778 53.0798 137 71.8574 137C90.6351 137 105.857 121.778 105.857 103Z");
+}
+
+main>svg:hover>path:nth-child(8) {
+	d: path("M191.857 103V99.1078L178.303 97.5212C158.928 88.8713 136.787 88.8713 117.412 97.5212L113.857 99.1078V103C113.857 121.778 129.08 137 147.857 137C166.635 137 181.857 121.778 181.857 103Z");
+}
+
 
 @media (prefers-reduced-motion) {
 	h1 {
@@ -306,7 +403,10 @@ h3 {
 
 	h2:before, h2:after {
 		display: none;
-		//animation: dissolve 2s;
+	}
+
+	main>section:nth-child(even) {
+		animation: none;
 	}
 	
 	main>section>div>article {
@@ -319,6 +419,58 @@ h3 {
 
 	main>section>div>article>h3:hover {
 		text-shadow: none;
+	}
+
+	main>section>div>article div {
+
+		text-shadow: none;
+	}
+
+	main>section>div>article div:hover {
+		text-shadow: none;
+	}
+
+	blockquote>p:first-child>span {
+		background: none;
+		-webkit-text-fill-color: #cc4d4d;
+		animation: none;
+	}
+
+	main>p {
+		display: block;
+		font-weight: 700;
+		transform: skew(-20deg);
+		margin: 0;
+		padding: 10px 20px;
+		background: yellow;
+		position: fixed;
+		bottom: 0;
+		right: 20px;
+	}
+
+	main>p>span {
+		display: block;
+		transform: skew(20deg); 
+	}
+
+	main>svg {
+	display: block;
+	margin: auto;
+	transform: rotate(0deg) scale(.5);
+	transition: none;
+	}
+
+	main>svg:hover {
+		transform: rotate(0deg) scale(.5);
+	}
+
+	main>svg:hover>circle {
+		fill: initial;
+	}
+
+	main>svg:hover>path:not(:nth-child(1)) {
+		fill: red;
+		transition: all 1s;
 	}
 	
 }
